[package]
authors = ["Kevin King <4kevinking@gmail.com>"]
name = "ssh-wire"
version = "0.1.0"

[dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
#libc = "0.2.121"
rand = "0.8.5"
ring = "0.16.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
#untrusted = "0.9.0"
jni = "0.19.0"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "sshwire"

[target]

#[target."cfg(target_os=\"android\")"]
#default-features = false
#rustc-link-lib = ["foo"]

[target."cfg(target_os=\"android\")".dependencies]

#[target."cfg(target_os=\"android\")".dependencies.jni]
#default-features = false
